--- a/debian/control
+++ b/debian/control
@@ -262,9 +262,11 @@ Description: NVIDIA binary EGL libraries${nvidia:LegacyDesc}
  This package contains the driver specific binary EGL implementation by NVIDIA
  that is accessed via libglvnd.
 
-Package: libgles1-nvidia
+Package: libgles1-glvnd-nvidia
 Architecture: i386 amd64 armhf
 Multi-Arch: same
+Conflicts: libgles1-nvidia
+Replaces: libgles1-nvidia
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
@@ -311,9 +313,11 @@ Description: NVIDIA binary OpenGL|ES 1.x libraries${nvidia:LegacyDesc}
  This package contains the driver specific binary OpenGL|ES 1.x implementation
  by NVIDIA that is accessed via libglvnd.
 
-Package: libgles2-nvidia
+Package: libgles2-glvnd-nvidia
 Architecture: i386 amd64 armhf
 Multi-Arch: same
+Conflicts: libgles2-nvidia
+Replaces: libgles2-nvidia
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
@@ -365,22 +369,19 @@ Description: NVIDIA binary OpenGL|ES 2.x libraries${nvidia:LegacyDesc}
 Package: libglx0-nvidia
 Architecture: i386 amd64
 Multi-Arch: same
+Conflicts: libglx0
+Replaces: libglx0
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia-alternative} (= ${binary:Version}),
  libglvnd-nvidia,
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary GLX stub libraries
- GLX ("OpenGL Extension to the X Window System") provides an interface between
- OpenGL and the X Window System as well as extensions to OpenGL itself.
+Description: Vendor neutral GL dispatch library -- libGLX
+ This is an implementation of the vendor-neutral dispatch layer for
+ arbitrating OpenGL API calls between multiple vendors on a per-screen basis.
  .
- See the description of the ${nvidia}-driver package
- or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
- for a complete list of supported GPUs and PCI IDs.
- .
- This package contains a libGLX.so.0 stub that redirects to a vendor
- implementation via libglvnd.
+ This package contains the libGLX shared library.
 
 #Package: libglx-${nvidia}0
 Package: libglx-nvidia0
