--- a/debian/rules
+++ b/debian/rules
@@ -45,7 +45,7 @@ libdir			?= usr/lib/$(DEB_HOST_MULTIARCH)
 nvidia_private		 = nvidia/$(current)
 
 CONTROL_PREFIXES	 = nvidia-driver nvidia-glx libgl1-nvidia nvidia-kernel nvidia-alternative xserver-xorg-video-nvidia
-CONTROL_PREFIXES	+= libnvidia-eglcore libegl1-nvidia libgles1-nvidia libgles2-nvidia
+CONTROL_PREFIXES	+= libnvidia-eglcore libegl1-nvidia libgles1-glvnd-nvidia libgles2-glvnd-nvidia
 CONTROL_PREFIXES	+= nvidia-vdpau-driver
 CONTROL_PREFIXES	+= libcuda1
 CONTROL_PREFIXES	+= nvidia-opencl-icd libnvidia-compiler
