--- a/debian/rules
+++ b/debian/rules
@@ -46,6 +46,7 @@ nvidia_private		 = nvidia/$(current)
 
 CONTROL_PREFIXES	 = nvidia-driver nvidia-glx libgl1-nvidia nvidia-kernel nvidia-alternative xserver-xorg-video-nvidia
 CONTROL_PREFIXES	+= libnvidia-eglcore libegl1-nvidia libgles1-glvnd-nvidia libgles2-glvnd-nvidia
+CONTROL_PREFIXES	+= libglx0-nvidia libglx-nvidia0 libgles-nvidia2 libgles-nvidia1
 CONTROL_PREFIXES	+= nvidia-vdpau-driver
 CONTROL_PREFIXES	+= libcuda1
 CONTROL_PREFIXES	+= nvidia-opencl-icd libnvidia-compiler
