update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@6193 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,8 +1,9 @@
 # The NVIDIA license does not allow any form of modification.
-[!amd64]: binary-file-built-without-LFS-support
-[!armhf]: shlib-with-executable-stack
+[i386 armhf]: binary-file-built-without-LFS-support
+[i386 amd64]: shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
 spelling-error-in-binary
+hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
