--- a/debian/nvidia-smi.lintian-overrides.in
+++ b/debian/nvidia-smi.lintian-overrides.in
@@ -1,7 +1,8 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
 spelling-error-in-binary
+hardening-no-bindnow
 hardening-no-fortify-functions
+hardening-no-pie
 hardening-no-relro
 hardening-no-stackprotector
-spelling-error-in-binary
