--- a/debian/control
+++ b/debian/control
@@ -36,7 +36,7 @@ Depends:
  ${nvidia-alternative} (= ${binary:Version}),
  ${nvidia:kmod:binary},
  nvidia-support,
- ${shlibs:Depends}, ${misc:Depends}
+ ${misc:Depends}
 Recommends:
  ${nvidia-settings},
  libgl1-${nvidia}-glx-i386 [amd64],
@@ -182,7 +182,7 @@ Architecture: i386
 Multi-Arch: foreign
 Depends:
  libgl1-${nvidia}-glx,
- ${shlibs:Depends}, ${misc:Depends}
+ ${misc:Depends}
 Description: NVIDIA binary OpenGL 32-bit libraries${nvidia:LegacyDesc}
  This metapackage helps the automatic installation of the 32-bit NVIDIA
  OpenGL libraries when installing libgl1-${nvidia}-glx
@@ -517,7 +517,7 @@ Architecture: i386
 Multi-Arch: foreign
 Depends:
  ${libcuda1},
- ${shlibs:Depends}, ${misc:Depends}
+ ${misc:Depends}
 Description: NVIDIA CUDA 32-bit runtime library${nvidia:LegacyDesc}
  This metapackage helps the automatic installation of the 32-bit NVIDIA CUDA
  library when installing ${libcuda1} on amd64 with foreign
@@ -717,7 +717,7 @@ Section: non-free/x11
 Architecture: i386 amd64 armhf
 Depends:
  pciutils,
- ${shlibs:Depends}, ${misc:Depends}
+ ${misc:Depends}
 Description: NVIDIA GPU detection utility
  The 'nvidia-detect' script in this package checks for an NVIDIA GPU in the
  system and recommends one of the non-free accelerated driver meta-packages
