--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -4,6 +4,7 @@ binary-has-unneeded-section
 shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
 spelling-error-in-binary
+hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
