--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,13 +1,16 @@
 # The NVIDIA license does not allow any form of modification.
-[!amd64]: binary-file-built-without-LFS-support
-embedded-library usr/lib*/libcuda.so.#VERSION#: zlib
-shlib-with-executable-stack
+[i386 armhf]: binary-file-built-without-LFS-support
+[i386 amd64]: shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
-[i386]: spelling-error-in-binary
+spelling-error-in-binary
 unstripped-binary-or-object
+hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
+
+# Use wildcard instead of exact substitution, this is a M-A: same package.
+embedded-library usr/lib*/libcuda.so.#VERSION#: zlib
 
 # libcudart.so.2 does dlopen("libcuda.so").
 non-dev-pkg-with-shlib-symlink
