--- a/debian/nvidia-opencl-icd.lintian-overrides.in
+++ b/debian/nvidia-opencl-icd.lintian-overrides.in
@@ -1,9 +1,10 @@
 # The NVIDIA license does not allow any form of modification.
-[!amd64]: binary-file-built-without-LFS-support
-shlib-with-executable-stack
+[i386]: binary-file-built-without-LFS-support
+[!ppc64el]: shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
-[i386]: spelling-error-in-binary
+spelling-error-in-binary
 unstripped-binary-or-object
+hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
