--- a/debian/rules
+++ b/debian/rules
@@ -339,16 +339,20 @@ prepare-squeeze-backport:
 
 ############################################################################
 
-PASV	?= --pasv
-CACHE	?= ../.cache
-ORIGDIR	?= nvidia-graphics-drivers-$(NVIDIA_RELEASE).orig
-TARBALL	?= nvidia-graphics-drivers$(legacy)_$(NVIDIA_RELEASE).orig.tar.gz
+CACHE			?= ../.cache
+ORIGDIR			?= nvidia-graphics-drivers-$(NVIDIA_RELEASE).orig
+TARBALL_BASE		?= nvidia-graphics-drivers$(legacy)_$(NVIDIA_RELEASE).orig
+TARBALL_SUFFIX		?= .tar.gz
+TARBALL			?= $(TARBALL_BASE)$(TARBALL_SUFFIX)
+ORIGDIR.main		?= $(ORIGDIR)
+TARBALL.main		?= $(TARBALL)
+ARCH_LIST.main		?= $(ARCH_LIST)
+NVIDIA_FILENAME_main	?= $(foreach a,$(ARCH_LIST.main),$(NVIDIA_FILENAME_$a))
 
 # $1 = arch
-get_download_url	 = $(HTTPURL_PREFIX)/$(HTTPURL_ARCHDIR_$(strip $1))/$(NVIDIA_RELEASE)/$(NVIDIA_FILENAME_$(strip $1))
+get_download_url	 = $(or $(HTTPURL_PREFIX_$(strip $1)),$(HTTPURL_PREFIX))/$(HTTPURL_ARCHDIR_$(strip $1))/$(NVIDIA_RELEASE)/$(NVIDIA_FILENAME_$(strip $1))
 
 get-orig-source-prepare:
-	$(RM) $(TARBALL)
 	$(RM) -r get-orig-source || true
 	mkdir get-orig-source
 
@@ -358,22 +362,25 @@ get-orig-source-download-%: get-orig-source-prepare
 	if [ -d $(CACHE) ] && [ ! -f $(CACHE)/$(NVIDIA_FILENAME_$*) ]; then \
 		ln -v get-orig-source/$(NVIDIA_FILENAME_$*) $(CACHE) ; fi
 
-.PHONY: get-orig-source
-get-orig-source: $(foreach a,$(ARCH_LIST),get-orig-source-download-$a)
-	#uscan --no-symlink --download-current-version $(PASV) \
-	#    --watchfile debian/watch --destdir get-orig-source
-	test $$(ls get-orig-source/* | wc -l) = $(words $(ARCH_LIST))  # we need one file per architecture
+get-orig-source-download-main: $(foreach a,$(ARCH_LIST.main),get-orig-source-download-$a) ;
+
+get-orig-source-%: get-orig-source-download-%
+	$(RM) $(TARBALL.$*)
 	@set -e -x ; \
 	    cd get-orig-source ; \
-	    mkdir $(ORIGDIR) ; \
-	    mv *.run $(ORIGDIR)/ ; \
-	    chmod 0755 $(ORIGDIR)/* ; \
-	    latestfile=$$(ls -tr $(ORIGDIR)/* | tail -n 1) ; \
+	    mkdir $(ORIGDIR.$*) ; \
+	    mv $(NVIDIA_FILENAME_$*) $(ORIGDIR.$*)/ ; \
+	    chmod 0755 $(ORIGDIR.$*)/* ; \
+	    latestfile=$$(ls -tr $$(find $(ORIGDIR.$*) -type f) | tail -n 1) ; \
 	    tar cv \
 	        --clamp-mtime --mtime="./$$latestfile" \
 	        --sort=name \
 		--owner=root --group=src \
-		$(ORIGDIR) \
-		| gzip -n -9 > ../$(TARBALL) ; \
-	    touch ../$(TARBALL) -r $$latestfile
+		$(ORIGDIR.$*) \
+		| gzip -n -9 > $(TARBALL.$*) ; \
+	    touch $(TARBALL.$*) -r $$latestfile
+	mv get-orig-source/$(TARBALL.$*) .
+
+.PHONY: get-orig-source
+get-orig-source: get-orig-source-main
 	rm -rf get-orig-source
