go without nvidia-kernel-common on ppc64el
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6214 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -333,7 +333,7 @@ Multi-Arch: foreign
 Depends:
  ${nvidia-alternative} (= ${binary:Version}),
  ${nvidia-alternative}--kmod-alias,
- nvidia-kernel-common (>= 20151021),
+ nvidia-kernel-common (>= 20151021) [!ppc64el],
  nvidia-modprobe,
  ${misc:Depends}
 Provides:
