--- a/debian/rules
+++ b/debian/rules
@@ -347,41 +347,47 @@ ORIGDIR.main		?= $(ORIGDIR)
 TARBALL.main		?= $(TARBALL)
 ARCH_LIST.main		?= $(filter-out ppc64el,$(ARCH_LIST))
 NVIDIA_FILENAME_main	?= $(foreach a,$(ARCH_LIST.main),$(NVIDIA_FILENAME_$a))
-ORIGDIR.ppc64el		?= $(ORIGDIR)-ppc64el
-TARBALL.ppc64el		?= $(TARBALL_BASE)-ppc64el$(TARBALL_SUFFIX)
 
 # $1 = arch
 get_download_url	 = $(or $(HTTPURL_PREFIX_$(strip $1)),$(HTTPURL_PREFIX))/$(HTTPURL_ARCHDIR_$(strip $1))/$(NVIDIA_RELEASE)/$(NVIDIA_FILENAME_$(strip $1))
+get_origdir		 = $(or $(ORIGDIR.$(strip $1)),$(ORIGDIR)-$(strip $1))
+get_tarball		 = $(or $(TARBALL.$(strip $1)),$(TARBALL_BASE)-$(strip $1)$(TARBALL_SUFFIX))
 
 get-orig-source-prepare:
-	$(RM) -r get-orig-source || true
+	$(RM) -r get-orig-source
 	mkdir get-orig-source
 
-get-orig-source-download-%: get-orig-source-prepare
+get-orig-source-prepare/%: get-orig-source-prepare
+	$(RM) $(call get_tarball,$*)
+	mkdir get-orig-source/$(call get_origdir,$*)
+
+get-orig-source-download/%: get-orig-source-prepare
 	ln -v $(CACHE)/$(NVIDIA_FILENAME_$*) get-orig-source/ 2>/dev/null || \
 		wget $(call get_download_url,$*) -P get-orig-source/
 	if [ -d $(CACHE) ] && [ ! -f $(CACHE)/$(NVIDIA_FILENAME_$*) ]; then \
 		ln -v get-orig-source/$(NVIDIA_FILENAME_$*) $(CACHE) ; fi
 
-get-orig-source-download-main: $(foreach a,$(ARCH_LIST.main),get-orig-source-download-$a) ;
+get-orig-source-download/main: $(foreach a,$(ARCH_LIST.main),get-orig-source-download/$a) ;
 
-get-orig-source-%: get-orig-source-download-%
-	$(RM) $(TARBALL.$*)
+get-orig-source-files/%: get-orig-source-prepare/% get-orig-source-download/%
 	@set -e -x ; \
 	    cd get-orig-source ; \
-	    mkdir $(ORIGDIR.$*) ; \
-	    mv $(NVIDIA_FILENAME_$*) $(ORIGDIR.$*)/ ; \
-	    chmod 0755 $(ORIGDIR.$*)/* ; \
-	    latestfile=$$(ls -tr $$(find $(ORIGDIR.$*) -type f) | tail -n 1) ; \
+	    mv $(NVIDIA_FILENAME_$*) $(call get_origdir,$*)/ ; \
+	    chmod 0755 $(call get_origdir,$*)/* ; \
+	    touch $(call get_origdir,$*).stamp -r $$(ls -tr $$(find $(call get_origdir,$*) -type f) | tail -n 1)
+
+get-orig-source-pack/%: get-orig-source-files/%
+	@set -e -x ; \
+	    cd get-orig-source ; \
 	    tar cv \
-	        --clamp-mtime --mtime="./$$latestfile" \
+	        --clamp-mtime --mtime="./$(call get_origdir,$*).stamp" \
 	        --sort=name \
 		--owner=root --group=src \
-		$(ORIGDIR.$*) \
-		| gzip -n -9 > $(TARBALL.$*) ; \
-	    touch $(TARBALL.$*) -r $$latestfile
-	mv get-orig-source/$(TARBALL.$*) .
+		$(call get_origdir,$*) \
+		| gzip -n -9 > $(call get_tarball,$*) ; \
+	    touch $(call get_tarball,$*) -r $(call get_origdir,$*).stamp
+	mv get-orig-source/$(call get_tarball,$*) .
 
 .PHONY: get-orig-source
-get-orig-source: get-orig-source-main $(foreach a,$(filter-out $(ARCH_LIST.main),$(ARCH_LIST)),get-orig-source-$a)
+get-orig-source: get-orig-source-pack/main $(foreach a,$(filter-out $(ARCH_LIST.main),$(ARCH_LIST)),get-orig-source-pack/$a)
 	rm -rf get-orig-source
