--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,6 @@ Pre-Depends:
 Depends:
  libgl1-${nvidia}-glx (= ${binary:Version}),
  libegl-${nvidia}0 (= ${binary:Version}),
- libopengl0-nvidia (= ${binary:Version}),
  ${nvidia}-driver-bin (= ${binary:Version}),
  xserver-xorg-video-${nvidia} (= ${binary:Version}),
  ${nvidia}-vdpau-driver (= ${binary:Version}),
@@ -42,6 +41,7 @@ Depends:
 Recommends:
  ${nvidia-settings},
  libgl1-${nvidia}-glx-i386 [amd64],
+ libopengl0-nvidia (= ${binary:Version}),
  libgles1-${nvidia} (= ${binary:Version}),
  libgles2-${nvidia} (= ${binary:Version}),
  nvidia-persistenced,
@@ -149,53 +149,45 @@ Description: check for NVIDIA GPUs requiring a legacy driver
  If such hardware is present, a debconf question will be asked to confirm the
  installation of the current driver line.
 
-Package: libglvnd-nvidia
-Architecture: none
-Multi-Arch: same
-Pre-Depends:
- ${misc:Pre-Depends}
-Depends:
- ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary GL vendor neutral libraries${nvidia:LegacyDesc}
- The vendor neutral dispatch library for OpenGL (libglvnd).
- The goal for libglvnd is to allow multiple OpenGL implementations from 
- different vendors to coexist on the same system, without interfering 
- with each other or requiring any manual configuration.
- .
- This package contains the binary libraries libGLdispatch.so.0 and
- libOpenGL.so.0 as shipped by NVIDIA.
-
 Package: libgldispatch0-nvidia
-Section: libs
 Architecture: i386 amd64 armhf
 Multi-Arch: same
-Conflicts: libglvnd-nvidia, libgldispatch0
-Replaces: libglvnd-nvidia, libgldispatch0
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
+Conflicts:
+ libglvnd-nvidia,
+ libgldispatch0,
+Replaces:
+ libglvnd-nvidia,
+ libgldispatch0,
 Description: Vendor neutral GL dispatch library -- libGLdispatch
  This is an implementation of the vendor-neutral dispatch layer for
  arbitrating OpenGL API calls between multiple vendors on a per-screen basis.
  .
- This package contains the libGLdispatch shared library.
+ This package contains the (binary) libGLdispatch shared library provided by
+ NVIDIA.
 
 Package: libopengl0-nvidia
-Section: libs
 Architecture: i386 amd64 armhf
 Multi-Arch: same
-Conflicts: libglvnd-nvidia, libopengl0
-Replaces: libglvnd-nvidia, libopengl0
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
+Conflicts:
+ libglvnd-nvidia,
+ libopengl0,
+Replaces:
+ libglvnd-nvidia,
+ libopengl0,
 Description: Vendor neutral GL dispatch library -- libOpenGL
  This is an implementation of the vendor-neutral dispatch layer for
  arbitrating OpenGL API calls between multiple vendors on a per-screen basis.
  .
- This package contains the libOpenGL shared library.
+ This package contains the (binary) libOpenGL shared library provided by
+ NVIDIA.
 
 #Package: libgl1-${nvidia}-glx
 Package: libgl1-nvidia-glx
@@ -247,18 +239,18 @@ Description: NVIDIA binary OpenGL 32-bit libraries${nvidia:LegacyDesc}
  OpenGL libraries when installing libgl1-${nvidia}-glx
  on amd64 with foreign architecture i386 enabled.
 
-#Package: libegl1-glvnd-${nvidia}
 Package: libegl1-glvnd-nvidia
 Architecture: i386 amd64 armhf
 Multi-Arch: same
-Conflicts: libegl1-nvidia
-Replaces: libegl1-nvidia
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia-alternative} (= ${binary:Version}),
- libgldispatch0-nvidia,
  ${shlibs:Depends}, ${misc:Depends}
+Conflicts:
+ libegl1-nvidia,
+Replaces:
+ libegl1-nvidia,
 Description: NVIDIA binary EGL stub libraries${nvidia:LegacyDesc}
  This package contains the EGL native platform graphics interface library.
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
@@ -279,8 +271,8 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia-alternative} (= ${binary:Version}),
+ libegl1-glvnd | libegl1-glvnd-nvidia,
  lib${nvidia}-eglcore (= ${binary:Version}),
- libegl1-glvnd-${nvidia} (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary EGL libraries${nvidia:LegacyDesc}
  This package contains the EGL native platform graphics interface library.
