substitute the ARCH_LIST
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@6225 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -7,7 +7,7 @@ Standards-Version: 3.9.0
 Homepage: http://www.nvidia.com/
 
 Package: nvidia-kernel#LEGACY#-#KVERS#
-Architecture: i386 amd64
+Architecture: #ARCH_LIST#
 Provides: nvidia-kernel-#VERSION#
 Depends: nvidia-kernel-common (>= 20110213)
 Recommends: linux-image-#KVERS#
