--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,6 +1,8 @@
+use-kbuild-compiler.patch
+conftest-verbose.patch
+conftest-via-kbuild.patch
+disable-preempt_rt_sanity_check.patch
 not-silent.patch
 avoid-ld.gold.patch
 use-nv-kernel-ARCH.o_shipped.patch
-conditionally-include-linux_version.h.patch
-uvm-symvers.patch
 ignore_xen_on_arm.patch
