disable cc_version_check, tests running kernel instead of compile target
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@6228 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,6 +1,7 @@
 use-kbuild-compiler.patch
 conftest-verbose.patch
 conftest-via-kbuild.patch
+disable-cc_version_check.patch
 disable-preempt_rt_sanity_check.patch
 not-silent.patch
 avoid-ld.gold.patch
