drop non-340xx bits from conftest.h
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@6229 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -361,7 +361,7 @@ get_origdir		 = $(or $(ORIGDIR.$(strip $1)),$(ORIGDIR)-$(strip $1))
 get_tarball		 = $(or $(TARBALL.$(strip $1)),$(TARBALL_BASE)-$(strip $1)$(TARBALL_SUFFIX))
 
 get-orig-source-prepare:
-	$(RM) -r get-orig-source || true
+	$(RM) -r get-orig-source
 	mkdir get-orig-source
 
 get-orig-source-prepare/%: get-orig-source-prepare
