--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -101,9 +101,9 @@ then
 	VERSIONS[295]=295.59
 fi
 
-if grep -q -i $NVGA $IDLISTDIR/nvidia-346.ids 2>/dev/null
+if grep -q -i $NVGA $IDLISTDIR/nvidia-352.ids 2>/dev/null
 then
-	VERSIONS[346]=346.87
+	VERSIONS[352]=352.79
 fi
 
 if grep -q -i $NVGA $IDLISTDIR/nvidia.ids 2>/dev/null
@@ -116,7 +116,7 @@ fi
 if [[ ${#VERSIONS[*]} == 0 ]]; then
        	echo "Uh oh. Your card is not supported by any driver version up to $LATEST."
 	echo "A newer driver may add support for your card."
-	echo "Newer driver releases may be available in backports."
+	echo "Newer driver releases may be available in backports, unstable or experimental."
 	exit 0;
 fi
 
@@ -204,10 +204,10 @@ fi
 		elif [[ -n ${VERSIONS[304]} ]]; then
 			echo "Your card is only supported up to the 304 legacy drivers series."
 			PACKAGE="nvidia-legacy-304xx-driver"
-		elif [[ -n ${VERSIONS[346]} ]]; then
-			echo "Your card is only supported by a newer driver that will be made available in jessie-backports."
+		elif [[ -n ${VERSIONS[352]} ]]; then
+			echo "Your card is only supported by a newer driver that is available in jessie-backports."
 			echo "See http://backports.debian.org for instructions how to use backports."
-			echo "You may also find driver packages in experimental."
+			echo "You may also find newer driver packages in experimental."
 			PACKAGE="nvidia-driver/jessie-backports"
 		elif [[ -n ${VERSIONS[173]} ]]; then
 			echo "Uh oh. Your card is only supported by the 173.14 legacy drivers series, which is not in any current Debian suite."
