--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -189,8 +189,10 @@ fi
 		elif [[ -n ${VERSIONS[96]} ]]; then
 			echo "Your card is only supported up to the 96.43 legacy drivers series.";
 			PACKAGE="nvidia-glx-legacy-96xx"
-		else
+		elif [[ -n ${VERSIONS[71]} ]]; then
 			echo "Uh oh. Your card is only supported by the 71.86 legacy drivers series, which is not in any current Debian suite.";
+		else
+			echo "Oops. Internal error 7 ($NVGA)"
 		fi;
 	elif grep -q "jessie\|^8" /etc/debian_version
 	then
@@ -213,8 +215,10 @@ fi
 			echo "Uh oh. Your card is only supported by the 173.14 legacy drivers series, which is not in any current Debian suite."
 		elif [[ -n ${VERSIONS[96]} ]]; then
 			echo "Uh oh. Your card is only supported by the 96.43 legacy drivers series, which is not in any current Debian suite."
-		else
+		elif [[ -n ${VERSIONS[71]} ]]; then
 			echo "Uh oh. Your card is only supported by the 71.86 legacy drivers series, which is not in any current Debian suite."
+		else
+			echo "Oops. Internal error 8 ($NVGA)"
 		fi
 	elif grep -q "stretch\|^9" /etc/debian_version
 	then
@@ -232,8 +236,10 @@ fi
 			echo "Uh oh. Your card is only supported by the 173.14 legacy drivers series, which is not in any current Debian suite."
 		elif [[ -n ${VERSIONS[96]} ]]; then
 			echo "Uh oh. Your card is only supported by the 96.43 legacy drivers series, which is not in any current Debian suite."
-		else
+		elif [[ -n ${VERSIONS[71]} ]]; then
 			echo "Uh oh. Your card is only supported by the 71.86 legacy drivers series, which is not in any current Debian suite."
+		else
+			echo "Oops. Internal error 9 ($NVGA)"
 		fi
 	elif grep -q "^4" /etc/debian_version;
 	then
