support building a 64-bit kernel module with 32-bit userspace
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@6262 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -461,7 +461,7 @@ Section: non-free/kernel
 Architecture: i386 amd64 armhf ppc64el
 Depends:
  debhelper (>= 9),
- make,
+ make:any,
  quilt,
  xz-utils,
  ${misc:Depends}
