--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,4 +1,5 @@
 use-kbuild-compiler.patch
+use-kbuild-flags.patch
 conftest-verbose.patch
 conftest-via-kbuild.patch
 disable-preempt_rt_sanity_check.patch
