support building a 64-bit kernel module with 32-bit userspace
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@6269 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,4 +1,5 @@
 use-kbuild-compiler.patch
+use-kbuild-flags.patch
 conftest-verbose.patch
 conftest-via-kbuild.patch
 disable-cc_version_check.patch
