--- a/debian/nvidia-kernel-dkms.dkms.in
+++ b/debian/nvidia-kernel-dkms.dkms.in
@@ -17,5 +17,5 @@ CLEAN="make KERNEL_UNAME=${kernelver} clean"
 #HAS_UVM#BUILT_MODULE_LOCATION[1]="uvm/"
 #HAS_UVM#DEST_MODULE_LOCATION[1]="/updates/dkms"
 #HAS_UVM#MAKE[0]+="; env CCACHE_DISABLE=1 NV_VERBOSE=1 \
-#HAS_UVM#    make -C uvm module KERNEL_UNAME=${kernelver} KBUILD_EXTMOD=${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build/uvm"
+#HAS_UVM#    unset ARCH; make -C uvm module KERNEL_UNAME=${kernelver} KBUILD_EXTMOD=${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build/uvm"
 #HAS_UVM#CLEAN+="; make -C uvm KERNEL_UNAME=${kernelver} clean"
