Unset ARCH in debian/module/debian/rules.in other than in dkms.conf
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6275 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -42,8 +42,8 @@ build-indep:
 build-stamp: configure-stamp
 	dh_prep
 	dh_quilt_patch
-	$(MAKE) module KERNEL_UNAME=$(KVERS)
-#HAS_UVM#	$(MAKE) -C uvm module KERNEL_UNAME=$(KVERS) KBUILD_EXTMOD=$(CURDIR)/uvm
+	unset ARCH; $(MAKE) module KERNEL_UNAME=$(KVERS)
+#HAS_UVM#	unset ARCH; $(MAKE) -C uvm module KERNEL_UNAME=$(KVERS) KBUILD_EXTMOD=$(CURDIR)/uvm
 	test "#MODULE#" = "nvidia" || mv nvidia.ko #MODULE#.ko
 #HAS_UVM#	test "#MODULE#" = "nvidia" || mv uvm/nvidia-uvm.ko uvm/#MODULE#-uvm.ko
 	touch $@
