be more verbose
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@6312 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -4,6 +4,8 @@
 # See Bug#582748.
 export CCACHE_DISABLE := 1
 
+export NV_VERBOSE := 1
+
 CFLAGS = -Wall -g
 ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
     CFLAGS += -O0
